2005-09-30  Callum McKenzie  <callum@spooky-possum.org>

	* configure.in: 
	* */Makefile.am: Rearrange the link order to keep Cygwin/MinGW
	happy. Patch from yselkowitz@users.sourceforge.net (bug #317561).

2005-09-29  Callum McKenzie  <callum@spooky-possum.org>

	* configure.in (scoredir): Add the build-breaker and
	mega-build-breaker to enable extremely anti-social compiler
	options during testing. Also fix up the -DNO_ESD flags.

2005-09-23  Callum McKenzie  <callum@spooky-possum.org>

	* gnome-games.spec: Update using Paul Smith's known-good version
	as a base.

2005-09-09  Callum McKenzie  <callum@spooky-possum.org>

	* configure.in: Bump the required gtk to 2.8.0 to drag in
	Cairo and its gdk bindings.

2005-09-08  Callum McKenzie  <callum@spooky-possum.org>

	* configure.in: Bump the version number to 2.13.0 to avoid
	confusion. Also, a patch from Leonardo Boshell to fix compiling
	without ESD.

2005-09-07  Callum McKenzie  <callum@spooky-possum.org>

	* configure.in: Move HOWL stuff out of CFLAGS so that nothing bad
	happens when CFLAGS is over-ridden. Also change the guile check to
	look for libguile.h: it is the only reliable test for the
	development packages since guile-config and its output do not
	depend on the development packages.

2005-08-22  Callum McKenzie  <callum@spooky-possum.org>

	* configure.in: Don't use gmodule-export, use plain gmodule since
	not everyone has it.

2005-08-16  Callum McKenzie  <callum@physics.otago.ac.nz>

	* README: 
	* configure.in: Patch from Hans Petter Jansson to allow Bonjour to
	be used for zeroconf networking instead of Howl. Documentation and
	alteration to not stop on a conflict by yours truly.

2005-08-11  Callum McKenzie  <callum@physics.otago.ac.nz>

	* configure.in (GLADE_LIBS): Make sure we get --export-dynamic so
	that glade_xml_signal_autoconnect works.

2005-08-08  Callum McKenzie  <callum@physics.otago.ac.nz>

	* configure.in: 
	* NEWS: 2.11.4.

2005-08-06  Callum McKenzie  <callum@physics.otago.ac.nz>
