@@ -73,7 +73,6 @@ Gnometris:
 	- Make preferences changeable mid-game. The old drawing problems should
           be gone, but we should check for other things before re-enabling it.
         - Drag and drop backgrounds:
-	  - Check colour: is it working properly from drag and drop?
 	  - Accepts gradients.
 	  - Tile tileable backgrounds rather than scaling them.
 
