@@ -1,3 +1,5 @@
+if HAVE_GUILE
+
 cardimagedir = $(datadir)/pixmaps/cards
 icondir = $(datadir)/pixmaps
 Gamesdir  = $(datadir)/applications
@@ -77,4 +79,6 @@ DISTCLEANFILES = $(sys_DATA) $(schema_DATA)
 if GCONF_SCHEMAS_INSTALL
 install-data-local:
 	GCONF_CONFIG_SOURCE=$(GCONF_SCHEMA_CONFIG_SOURCE) $(GCONFTOOL) --makefile-install-rule $(top_builddir)/aisleriot/$(schema_DATA)
+endif
+
 endif
