@@ -1,1 +1,5 @@
+if HAVE_CXX
+
 SUBDIRS = src data pixmaps help
+
+endif
