@@ -104,7 +104,7 @@ AC_ARG_ENABLE(howl, [  --disable-howl          build without howl support])
 if test "x$enable_howl" != "xno"; then
 	PKG_CHECK_MODULES(HOWL, howl >= 0.9.6, [ HOWL_EXTRA_CFLAGS="-DHAVE_ZEROCONF -DHAVE_HOWL" msg_zeroconf="howl" ],
 			  [ msg_zeroconf="none" ])
-        HOWL_CFLAGS="$(HOWL_CFLAGS) $(HOWL_EXTRA_CFLAGS)"
+        HOWL_CFLAGS="${HOWL_CFLAGS} ${HOWL_EXTRA_CFLAGS}"
 	AC_SUBST(HOWL_CFLAGS)
 	AC_SUBST(HOWL_LIBS)
 else
@@ -264,6 +264,47 @@ AC_ARG_ENABLE(mega-build-breaker,
   [GNOME_GAMES_CFLAGS="$GNOME_GAMES_CFLAGS $BUILD_BREAKER_BASIC $MEGA_BUILD_BREAKER"
    GNOME_GAMES_CXXFLAGS="$GNOME_GAMES_CXXFLAGS $BUILD_BREAKER_BASIC $MEGA_BUILD_BREAKER"])  
 
+
+## Handle the disabling and enabling of games
+
+# This is the canonical list of all game subdirectories.
+allgames="aisleriot blackjack gnometris gnect gnomine same-gnome mahjongg gtali gnome-stones gataxx gnotravex gnotski glines iagno gnobots2 gnibbles"
+
+gamelist=""
+
+## This has a particularly silly name because autoconf doesn't allow 
+## --disable-foo to have arguments so we have to use an --enable-fubar form.
+AC_ARG_ENABLE(omitgames, [  --enable-omitgames=list     Don't compile games in the comma separated list.
+                              ("all" is valid)])
+if test "x${enable_omitgames}" != "x"; then
+   enable_omit_games=`echo "${enable_omitgames}" | sed -e 's/[[	,]][[	,]]*/,/g' -e 's/,$//'`
+   for game in ${allgames}; do
+      case ,${enable_omit_games}, in
+	  *,all,*) gamelist="";;
+          *,${game},*) ;;
+	  *) gamelist="${gamelist} ${game}";; 
+      esac
+   done
+else
+   gamelist=${allgames} # Everything on by default
+fi
+
+AC_ARG_ENABLE(games, [  --enable-games=list         Enable the games in the comma separated list
+			      ("all" is valid)])
+if test "x${enable_games}" != "x"; then
+   enable_games=`echo "${enable_games}" | sed -e 's/[[	,]][[	,]]*/,/g' -e 's/,$//'`
+   for game in ${allgames}; do
+      case ,${enable_games}, in
+	  *,all,*) gamelist=${allgames};;
+          *,${game},*) gamelist="${gamelist} ${game}";;
+	  *) ;; 
+      esac
+   done
+fi
+
+AC_SUBST(gamelist)
+AC_SUBST(allgames)
+
 AC_CONFIG_FILES([
 gnome-games.spec
 Makefile
@@ -346,9 +387,11 @@ Configuration:
 	Source code location:	  	   ${srcdir}
 	Compiler:		  	   ${CC}
 
-	Compile Gnometris, Blackjack
-	(Have c++ compiler):		   ${CXX_PRESENT}
-	Compile AisleRiot (Have guile):	   ${GUILE_PRESENT}
+	Games to be compiled:		  ${gamelist}
+
+	C++ compiler found	
+	(Gnometris and Blackjack):	   ${CXX_PRESENT}
+	Guile found (Aisleriot):	   ${GUILE_PRESENT}
 
         Use setgid binaries                ${setgid}
         Scores user                        ${scores_user}
