@@ -2,7 +2,8 @@
 
 	* rules/spiderette.scm: Patch from Vincent Povirk to fix the
 	issues with spiderette (bug #318339). This is mostly a
-	cut-and-paste job from spider.
+	cut-and-paste job from spider. I also made the check for a
+	sequence of thirteen that can go to the foundation explicit.
 
 2005-09-28  Callum McKenzie  <callum@spooky-possum.org>
 
