@@ -1,3 +1,13 @@
+2005-10-12  Callum McKenzie  <callum@spooky-possum.org>
+
+	* README:
+	* Makefile.am: 
+	* configure.in:
+	* aisleriot/Makefile.am:
+	* blackjack/Makefile.am:
+	* gnometris/Makefile.am: Add support for --enable-games and
+	--disable--games to selectively build games.
+
 2005-09-30  Callum McKenzie  <callum@spooky-possum.org>
 
 	* configure.in: 
